# exp

./: .gitmodules  CLAUDE.md  profile_all.py
python-ml/: main.py  profile_inference.py  requirements.txt
stable-diffusion-cpp/: .gitignore  CLAUDE.md  CMakeLists.txt  main.cpp  profile_main.cpp
tensor_rt/: .gitignore  CLAUDE.md  CMakeLists.txt
tensor_rt/scripts/: build_engines.py  debug_scheduler.py  download_onnx.py  export_onnx.py  validate.py
tensor_rt/src/: engine.cpp  engine.h  main.cpp  pipeline.cpp  pipeline.h  scheduler.cpp  scheduler.h  tokenizer.cpp  tokenizer.h
zig_tensorrt/: .gitignore  CLAUDE.md  build.zig  data  engines
zig_tensorrt/scripts/: setup_u2net.py
zig_tensorrt/src/: background_removal.zig  engine.zig  inference.zig  lib.zig  main.zig  pipeline.zig  trt_wrapper.h
zig_tensorrt/src/text_to_image/: background_removal.zig  inference.zig  pipeline.zig  scheduler.zig  tokenizer.zig
zig_tensorrt/trt_wrapper/: stb_impl.cpp  trt_engine.cpp  trt_engine.h  trt_wrapper.cpp
